src/index.css
@config "../tailwind.config.js";
@import "tailwindcss";

@font-face {
  font-family: 'Inter Light';
  src: url('/Inter_28pt-Light.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: 'PP Neue Montreal';
  src: url('/PPNeueMontreal-Book.otf') format('opentype');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'PP Neue Montreal';
  src: url('/PPNeueMontreal-Medium.otf') format('opentype');
  font-weight: 500;
  font-style: normal;
}

html {
  scroll-behavior: smooth;
  background-color: #261E19;
}

body {
  @apply font-montreal;
  min-height: 100vh;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  background-color: #261E19;
  background-attachment: fixed;
}

#root {
  min-height: 100vh;
  background-color: transparent;
  position: relative;
  z-index: 1;
  color: white;
  width: 100%;
}

.hero-media img {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-drag: none;
  -khtml-user-drag: none;
  user-drag: none;
  pointer-events: none;
}

